Fix Image height (auto-height impossible)

--- a/app/styles/Help.module.css
+++ b/app/styles/Help.module.css
@@ -30,7 +30,9 @@
 }
 
 .illustationContainer {
-    width: 75%
+    width: 75%;
+    position: relative;
+    padding-bottom: 50%;
 }
 
 /* Phones */
