--- a/app/styles/Profile.module.css
+++ b/app/styles/Profile.module.css
@@ -2,9 +2,9 @@
     background-color: #F9FDFF;
     height: 100vh;
     width: 100vw;
-  }
-  
-  .container {
+}
+
+.container {
     min-height: 100vh;
     padding: 0 0.5rem;
     display: flex;
@@ -12,147 +12,125 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-  
-  .main {
+}
+
+.main {
     padding: 0 20% 0 20%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-  }
-  
-  .prescriptions {
-    width: 45%;
-  }
-  
-  .prescriptions .headerText {
-    color: #004977;
-    font-weight: 500;
-    font-size: larger;
-  }
-  
-  .prescriptions .title {
-    color: #004977;
-    font-weight: 600;
-    font-size: large;
-  }
-  
-  .prescriptions .description {
-    color: #004977;
-    font-weight: normal;
-    font-size: medium;
-  }
-  
-  .pharmacies {
+}
+
+.favorite {
     width: 45%;  
-  }
-  
-  .pharmacies .headerText {
+}
+
+.favorite .headerText {
     color: #004977;
     font-weight: 500;
     font-size: larger;
-  }
-  
-  .pharmacies .title {
+}
+
+.favorite .title {
     margin-bottom: 5px;
     color: #004977;
     font-weight: 600;
     font-size: large;
-  }
-  
-  .pharmacies .distance {
+}
+
+.favorite .distance {
     margin-top: 0;
     color: #004977;
     font-weight: 400;
     font-size: small;
-  }
-  
-  .pharmacies .description {
+}
+
+.favorite .description {
     color: #004977;
     font-weight: 300;
     font-size: medium;
-  }
-  
-  .pharmacies .header {
+}
+
+.favorite .header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
-  
-  .prescriptionsList {
+}
+
+.informations {
     width: 100%;
     margin-bottom: 25px;
-  }
-  
-  .prescriptionsList hr {
+}
+
+.informations hr {
     margin-top: 25px;
     border: 0.5px solid rgba(5, 131, 211, 0.2);
-  }
-  
-  .prescriptionsList .headerText {
+}
+
+.informations .headerText {
     color: #004977;
     font-weight: 500;
     font-size: larger;
-  }
-  
-  .prescriptionsTable {
+}
+
+.informationsTable {
     width: 100%;
     border-collapse: collapse;
     border-spacing: 15px;
     padding: 15px;
-  }
-  
-  .prescriptionsTable tr {
+}
+
+.informationsTable tr {
     width: 100%;
     border-bottom: 0.5px solid rgba(5, 131, 211, 0.2);
     padding: 15px;
     color: #004977;
     ;
-  }
-  
-  .prescriptionsTable tr:last-child {
+}
+
+.informationsTable tr:last-child {
     border-bottom: none;
-  }
-  
-  .prescriptionsTable td {
+}
+
+.informationsTable td {
     /* border: 1px solid black; */
     width: 50%;
     padding: 15px;
-  }
-  
-  .prescriptionsTable .date {
+}
+
+.informationsTable .detail {
     text-align: end;
-  }
-  
-  .buttonContainer {
+}
+
+.buttonContainer {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-  }
-  
-  button.consult, button.validate, button.destination{
+}
+
+button.consult, button.validate, button.destination{
     padding: 5px 15px 5px 15px;
     font-size: small;
-  }
-  
-  button.consult {
+}
+
+button.consult {
     background: #FFFFFF;
     border: 0.2px solid rgba(0, 153, 250, 0.31);
     box-sizing: border-box;
     box-shadow: 1px 2px 7px rgba(5, 131, 211, 0.16);
     border-radius: 11.5px;
     color: #004977;
-  }
-  
-  button.validate {
+}
+
+button.validate {
     background: linear-gradient(180deg, #90D35F 0%, #6FB33E 100%);
     border-radius: 15px;
     border: none;
     color: white;
-  }
-  
-  button.more {
+}
+
+button.more {
     background: linear-gradient(180deg, #0099FA 0%, #0583D3 100%);
     border-radius: 15px;
     border: none;
@@ -162,58 +140,58 @@
     width: 100%;
     margin-top: 20px;
     padding: 10px 0 10px 0;
-  }
-  
-  button.destination {
+}
+
+button.destination {
     margin-top: 10px;
     background: linear-gradient(180deg, #0099FA 0%, #028AE0 100%);
     border-radius: 15px;
     border: none;
     color: white;
     max-height: 30px;
-  }
-  
-  .call {
+}
+
+.call {
     color: #0099FA;
-  }
-  
-  .footer {
+}
+
+.footer {
     width: 100%;
     height: 100px;
     border-top: 1px solid #eaeaea;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .footer a {
+}
+
+.footer a {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-  }
-  
-  .title a {
+}
+
+.title a {
     color: #0070f3;
     text-decoration: none;
-  }
-  
-  .title a:hover,
-  .title a:focus,
-  .title a:active {
+}
+
+.title a:hover,
+.title a:focus,
+.title a:active {
     text-decoration: underline;
-  }
-  
-  .code {
+}
+
+.code {
     background: #fafafa;
     border-radius: 5px;
     padding: 0.75rem;
     font-size: 1.1rem;
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
-  }
-  
-  .card {
+}
+
+.card {
     padding: 1.5rem;
     text-decoration: none;
     border-radius: 25px;
@@ -221,29 +199,32 @@
     width: 100%;
     background: #FFFFFF;
     box-shadow: 1px 6px 20px rgba(5, 75, 120, 0.15);
-  }
-  
-  .card:hover,
-  .card:focus,
-  .card:active {
+}
+
+.card:hover,
+.card:focus,
+.card:active {
     color: #0070f3;
     border-color: #0070f3;
-  }
-  
-  .logo {
+}
+
+.logo {
     height: 1em;
     margin-left: 0.5rem;
-  }
-  
-  /* Phones */
-  
-  @media (max-width: 480px) {
+}
+
+/* Phones */
+
+@media (max-width: 480px) {
     .main {
-      padding: 0 25px 0 25px;
+        padding: 0 25px 0 25px;
     }
     
-    .prescriptions, .pharmacies {
-      width: 100%;
+    .prescriptions, .favorite {
+        width: 100%;
     }
-  }
-  
+
+    .favorite:last-child {
+        margin-bottom: 25px;
+    }
+}
